osd: Fix assert in the case that snapset is missing

Fixes: https://tracker.ceph.com/issues/41517

Signed-off-by: David Zafman <dzafman@redhat.com>
(cherry picked from commit 38ecc4e92c8982763a7073503c8f5740cd712fec)